--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="css/rubyblue.css" />
     <link rel="stylesheet" type="text/css" href="css/app.css" />
     <link rel="stylesheet" type="text/css" href="css/jquery-ui.min.css" />
-
+    <link rel="icon" href="img/favicon.ico">
     <!-- <script src="//use.edgefonts.net/source-code-pro.js"></script>-->
 </head>
 
